<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="re_type_password">re-type password</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="id_type_select_one">ID type (select one)</string>
    <string name="driver_s_license">Driver License</string>
    <string name="nhia_membership">NHIA membership</string>
    <string name="passport">Passport</string>
    <string name="national_id">National ID</string>
    <string name="id_number">ID number</string>
    <string name="done">Done</string>
    <string name="full_name">Full Name</string>
    <string name="user_id">User ID</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="phone_number">Phone number</string>
    <string name="voter_id">Voter ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
</resources>