<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorMain_grey"
    android:layout_height="match_parent"
    tools:context=".kk">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn2"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingRight="60dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:paddingRight="150dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_next4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:text="@string/next"
        android:textColor="#107A16"
        android:textSize="20sp"
        app:backgroundTint=""
        app:backgroundTintMode="screen"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/ed_ID_number" />


    <RelativeLayout
        android:id="@+id/Layout_relative_3"
        android:layout_width="0dp"
        android:layout_height="423dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_ID_type3"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:width="347dp"
            android:elevation="10dp"
            android:background="@drawable/elevation_bg"
            android:drawablePadding="16dp"
            android:minHeight="56dp"
            android:text="@string/driver_s_license" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:width="347dp"
            android:elevation="10dp"
            android:background="@drawable/elevation_bg"
            android:drawablePadding="16dp"
            android:minHeight="56dp"
            android:text="@string/voter_id" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:width="347dp"
            android:elevation="10dp"
            android:background="@drawable/elevation_bg"
            android:drawablePadding="16dp"
            android:minHeight="56dp"
            android:text="@string/nhia_membership" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="10dp"
            android:width="347dp"
            android:background="@drawable/elevation_bg"
            android:drawablePadding="16dp"
            android:elevation="10dp"
            android:minHeight="56dp"
            android:text="@string/passport" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:width="347dp"
            android:elevation="10dp"
            android:background="@drawable/elevation_bg"
            android:drawablePadding="16dp"
            android:minHeight="56dp"
            android:text="@string/national_id" />

        <TextView
            android:id="@+id/ed_ID_type2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="-15dp"
            android:layout_marginRight="-15dp"
            android:autofillHints="ID type (select one)"
            android:ems="10"
            android:paddingLeft="15dp"
            android:text="@string/id_type_select_one"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/ed_ID_number"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/elevation_bg"
        android:elevation="10dp"
        android:drawableLeft="@drawable/ic_id"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="number|phone"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:layout_editor_absoluteY="584dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/ed_ID_type3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text="@string/id_number"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_ID_number"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        android:paddingEnd="220dp" />
</androidx.constraintlayout.widget.ConstraintLayout>