<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".are">

    <Button
        android:id="@+id/btn_next2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn"
        android:text="@string/next"
        android:textColor="@color/colorMain_Orange_Deep"
        android:textSize="20sp"
        app:backgroundTint=""
        app:backgroundTintMode="screen"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/Layout_relative_2" />

    <RelativeLayout
        android:id="@+id/Layout_relative_2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Layout_relative"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="56dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/txv_field">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                app:ccp_textSize="16sp"
                app:ccp_autoCodeDetectedCountry="true"
                app:ccp_showNameCode="true"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLength="9"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="16sp"/>



        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Layout_relative"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txvRetypePassword"
            android:layout_width="346dp"
            android:layout_height="54dp"
            android:layout_below="@+id/txvPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:background="@drawable/txv_field"
            android:ems="10"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_visibility"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txvEmailAddress"
            android:layout_width="347dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:autofillHints=""
            android:background="@drawable/txv_field"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvPassword"
            tools:ignore="LabelFor,NotSibling,RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/txvPassword"
            android:layout_width="346dp"
            android:layout_height="54dp"
            android:layout_below="@+id/txvEmailAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:background="@drawable/txv_field"
            android:ems="10"
            android:hint="@string/password"
            android:drawableRight="@drawable/ic_visibility"
            android:inputType="textPassword"
            android:padding="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_next2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Layout_relative_2"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>