<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain_grey"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn2"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingRight="60dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:paddingRight="150dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


    <RelativeLayout
        android:id="@+id/Layout_relative"
        android:layout_width="0dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txvEmailAddress"
            android:layout_width="347dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:autofillHints=""
            android:background="@drawable/elevation_bg"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvPassword"
            tools:ignore="LabelFor,NotSibling,RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/txvPassword"
            android:layout_width="346dp"
            android:layout_height="54dp"
            android:layout_below="@+id/txvEmailAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/elevation_bg"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling,RtlCompat,RtlSymmetry" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/btn"
        android:backgroundT="@drawable/btn"
        android:text="@string/next"
        android:textColor="#107A16"
        android:textSize="20sp"
        app:backgroundTint=""
        app:backgroundTintMode="screen"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/Layout_relative" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_undraw_modern_life_u1ev__1_"
        app:layout_constraintBottom_toTopOf="@+id/Layout_relative"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>