<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/Layout_relative_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_next5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn"
        android:backgroundT="@drawable/btn"
        android:text="@string/log_in"
        android:textColor="@color/colorMain_Orange_Deep"
        android:textSize="20sp"
        app:backgroundTint=""
        app:backgroundTintMode="screen"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/Layout_relative"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/Layout_relative"
        android:layout_width="361dp"
        android:layout_height="165dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txvEmailAddress"
            android:layout_width="347dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:autofillHints=""
            android:background="@drawable/txv_field"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="number|textPersonName|textEmailAddress|phone"
            android:padding="16dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvPassword"
            tools:ignore="LabelFor,NotSibling,RtlCompat,RtlSymmetry" />

        <EditText
            android:id="@+id/txvPassword"
            android:layout_width="346dp"
            android:layout_height="54dp"
            android:layout_below="@+id/txvEmailAddress"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/txv_field"
            android:ems="10"
            android:hint="@string/passport"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingEnd="50dp"
            android:paddingRight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling,RtlCompat,RtlSymmetry" />


    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>